--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body class="bg-gray-900 text-white">
-    <!-- Navigation -->
+    <!-- Navigate -->
     <nav class="fixed w-full z-50 bg-gray-900 bg-opacity-90 backdrop-filter backdrop-blur-sm">
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
