Update index.html 3

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <i class="fas fa-cocktail text-2xl text-amber-400 mr-2"></i>
-                    <span class="title-font text-2xl font-bold">Amsterdam <span class="text-amber-400">Class</span></span>
+                   <img src="assets/logo.png">
                 </div>
                 
                 <div class="hidden md:flex space-x-8">
@@ -122,7 +121,7 @@
                 Com Mackenzie no Amsterdam Class, transforme sua paixão por drinks em uma carreira sólida e lucrativa. <br> <br><strong>Aulas práticas com foco em eventos reais, estágios garantidos e suporte completo na sua jornada profissional em Belo Horizonte!</strong>
             </p>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="#contact" class="btn-primary py-4 px-8 rounded-full font-bold text-gray-900">
+                <a href="https://www.sympla.com.br/evento/curso-de-bartender/3043967" class="btn-primary py-4 px-8 rounded-full font-bold text-gray-900" target="_blank">
                     Inscreva-se Agora <i class="fas fa-arrow-right ml-2"></i>
                 </a>
                 <a href="#course" class="border-2 border-amber-400 py-4 px-8 rounded-full font-bold text-amber-400 hover:bg-amber-400 hover:text-gray-900 transition">
@@ -191,7 +190,7 @@
             <div class="grid md:grid-cols-3 gap-10 mb-16">
                 <div class="cocktail-card bg-gray-800 p-8 rounded-lg text-center">
                     <div class="flair-icon">
-                        <i class="fas fa-shaker"></i>
+                        <i class="fa-solid fa-comments-dollar"></i>
                     </div>
                     <h3 class="title-font text-2xl font-bold mb-4">Gestão de carreira</h3>
                     <p>
@@ -323,7 +322,7 @@
                 </div>
                 
                 <div class="text-center mt-8">
-                    <a href="#contact" class="btn-primary py-4 px-8 rounded-full font-bold text-gray-900 inline-block">
+                    <a href="https://www.sympla.com.br/evento/curso-de-bartender/3043967?referrer=chatgpt.com" class="btn-primary py-4 px-8 rounded-full font-bold text-gray-900 inline-block" target="_blank">
                         Quero me Inscrever <i class="fas fa-glass-cheers ml-2"></i>
                     </a>
                 </div>
@@ -404,7 +403,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </div>
