--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                   <img src="assets/logo.png">
+                   <img src="assets/logo2.png">
                 </div>
                 
                 <div class="hidden md:flex space-x-8">
@@ -422,22 +422,22 @@
             
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                 <div class="overflow-hidden rounded-lg">
-                    <img src="https://images.unsplash.com/photo-1551751299-1b51cab2694c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" 
+                    <img src="assets/foto1.jpeg" 
                          alt="Espaço Amsterdam Class" 
                          class="w-full h-full object-cover transition duration-500 hover:scale-110">
                 </div>
                 <div class="overflow-hidden rounded-lg">
-                    <img src="https://images.unsplash.com/photo-1514933651103-005eec06c04b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" 
+                    <img src="assets/foto2.jpeg" 
                          alt="Aula prática" 
                          class="w-full h-full object-cover transition duration-500 hover:scale-110">
                 </div>
                 <div class="overflow-hidden rounded-lg">
-                    <img src="https://images.unsplash.com/photo-1608270586620-248524c67de9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" 
+                    <img src="assets/foto3.jpeg" 
                          alt="Bar completo" 
                          class="w-full h-full object-cover transition duration-500 hover:scale-110">
                 </div>
                 <div class="overflow-hidden rounded-lg">
-                    <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1586&q=80" 
+                    <img src="assets/foto4.jpeg" 
                          alt="Ingredientes" 
                          class="w-full h-full object-cover transition duration-500 hover:scale-110">
                 </div>
