--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                   <img src="assets/logo2.png">
+                   <img src="assets/logo2.png" class="max-w-[200px]">
                 </div>
                 
                 <div class="hidden md:flex space-x-8">
