--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                    <img src="https://images.unsplash.com/photo-1551751299-1b51cab2694c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" 
+                    <img src="assets/fotomack.jpg" 
                          alt="Mackenzie bartending" 
                          class="rounded-lg shadow-2xl w-full h-auto">
                 </div>
