--- a/index.html
+++ b/index.html
@@ -79,13 +79,17 @@
         .nav-link:hover:after {
             width: 100%;
         }
+
+        .gambiarra{
+            font-size: 1.125rem !important;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
     <!-- Navigation -->
     <nav class="fixed w-full z-50 bg-gray-900 bg-opacity-90 backdrop-filter backdrop-blur-sm">
         <div class="container mx-auto px-6 py-4">
-            <div class="flex items-center justify-between">
+            <div class="flex items-center justify-center md:justify-between">
                 <div class="flex items-center">
                    <img src="assets/logo2.png" class="max-w-[200px]">
                 </div>
@@ -114,10 +118,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero min-h-screen flex items-center pt-20">
         <div class="container mx-auto px-6 text-center">
-            <h1 class="title-font text-5xl md:text-7xl font-bold mb-6">
+            <h1 class="text-5xl md:text-7xl font-bold mb-6">
                 Domine a <span class="text-amber-400">Arte</span> do Bartender para Eventos
             </h1>
-            <p class="text-xl md:text-2xl mb-10 max-w-3xl mx-auto">
+            <p class="text-md md:text-2xl mb-10 max-w-3xl mx-auto">
                 Com Mackenzie no Amsterdam Class, transforme sua paixão por drinks em uma carreira sólida e lucrativa. <br> <br><strong>Aulas práticas com foco em eventos reais, estágios garantidos e suporte completo na sua jornada profissional em Belo Horizonte!</strong>
             </p>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
@@ -502,4 +506,5 @@
                 
                 
 </html>
+
 
